@startuml
entity "User" as U {
  +id: Long
  +username: String
  +password: String
}

entity "Playlist" as P {
  +id: Long
  +name: String
  +genre: String
  +mood: String
}

entity "Song" as S {
  +id: Long
  +title: String
  +artist: String
  +genre: String
}

U ||--o{ P : "creates"
P }o--o{ S : "contains"
U }o--o{ U : "is compared with (compatibility)"
@enduml
